# Odisseo

./: .gitignore  LICENSE  README.md  fireworks.py  paper.bib  paper.md  pyproject.toml  readthedocs.yaml  setup.py  test_fireworks.py
.github/workflows/: draft-pdf.yml
docs/source/: conf.py  conservation.md  first_simulation.md  gradient.md  index.md  parallelism.md  units.md
docs/source/source/: odisseo.option_classes.rst  odisseo.time_integration.rst  odisseo.units.rst
jdgsim/: __init__.py  dynamics.py  initial_condition.py  integrators.py  option_classes.py  potentials.py  time_integration.py  units.py  utils.py  visualization.py
notebooks/: 2body.ipynb  2body_gradtest.ipynb  3body.ipynb  GD1 copy.ipynb  GD1.ipynb  GD1_3MNdisks.ipynb  GD1_TriaxialNFW.ipynb  GD1_TwoPowerTriaxialNFW.ipynb  Pal5_TwoPowerTriaxialNFW.ipynb  Plummer copy.ipynb  Plummer.ipynb  Plummer_density_profile.ipynb  Plummer_gradtest.ipynb  Plummer_in_MNpotential.ipynb  Plummer_in_MNpotential_gradtest.ipynb  Plummer_in_MWpotential.ipynb  Plummer_in_NFW_MNpotential.ipynb  Plummer_in_NFWpotential.ipynb  Plummer_in_PointMassPotential.ipynb  Plummer_in_PointMasspotential.ipynb  Rebound.ipynb  SingleBody_in_NFWpotential.ipynb  circular_velocity_gradient.py  circular_velocity_gradient_galax.py  first_test.ipynb  firt_test_jdgsim.ipynb  galax_potential.ipynb  galaxy_disc_sims.ipynb  jaccpot_fmm_first_integration copy.ipynb  jaccpot_fmm_first_integration.ipynb  mass_segregation.ipynb  rebound.ipynb  reflex_motion_test.py  reflex_motion_tests.ipynb  sampling.ipynb  scalability_Plummer_in_NFWpotential.ipynb
notebooks/dev/: diffrax_test.ipynb  observation.ipynb
notebooks/dev/albastross/: Likelihood_gradient_ascend_bootstrapping.py  MCMC_tensforflow.ipynb  NUTS__newlikelihood.py  NUTS_newlikelihood.ipynb  analyze_chains.ipynb  generate_dataset_fix_position.py  (+36 more)
notebooks/gradient_test/: Bowden_backward_integration_fitting.ipynb  Plummer_gradtest.ipynb  Plummer_in_MNpotential_gradtest.ipynb  ScipyMinimize.ipynb  grad_NFW_Potential.ipynb  grad_NFW_Potential_and_integrationtime.ipynb  grad_NFW_Potential_and_orbitalparameters.ipynb  noselfgravity.ipynb  sampling_gradient.ipynb
notebooks/reflex_motion_tests/: example-mwlmc-integration.ipynb  galpy_parameters.ipynb  research_notes.md  singleParticle_test.py  stream_test.py
notebooks/scalability/: data_sharding.ipynb  runtime_list_direct_acc.npy  runtime_list_direct_acc_N_10.npy  runtime_list_laxmap.npy  runtime_list_matrix.npy  scalability_Plummer_in_NFWpotential.ipynb  scalability_Plummer_in_NFWpotential.py  scalability_Plummer_in_NFWpotential_alldynamics.py  sharding_and_pmap.ipynb  sharding_and_pmap.py  visualize_scalability.ipynb
notes/: jaccpot_traced_leaf_cap_patch.md
odisseo/: __init__.py  accelerations.py  dynamics.py  initial_condition.py  integration_api.py  integrators.py  jaccpot_coupling.py  option_classes.py  potentials.py  time_integration.py  units.py  utils.py  visualization.py
odisseo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  reflex_motion_test.py  test_dynamics.py  test_initial_condition.py  test_integration_api.py  test_integrators.py  test_potentials.py  test_units.py
(+93 files in other folders)
