[tool.poetry]
name = "odisseo"
version = "0.1.0"
description = "differentiable N-body simulator"
authors = ["Giuseppe Viterbo"]
readme = "README.md"
packages = [{include = "odisseo"}]

[tool.poetry.dependencies]
python = ">=3.9"
optax = ">=0.2.0"
optimistix = ">=0.0.1"
jax = ">=0.4.35"
scipy = ">=1.0.0"
astropy = ">=6.0.0"
numpy = ">=1.0.0"
matplotlib = ">=3.9.0"
equinox = ">=0.11.0"
beartype = ">=0.19.0"
sphinx-autodoc2 = "0.5.0"

 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"