# This section describes the requirements of the build/installation
# process itself. Being able to do this was the original reason to
# introduce pyproject.toml
[build-system]
requires = [
    "setuptools >=61",
]
build-backend = "setuptools.build_meta"


[project]
name = "odisseo"
version = "0.1.0"
description = "differentiable N-body simulator"
authors = [{ name = "Giuseppe Viterbo" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "sphinx-autodoc2",
    "optax >=0.2.0",
    "diffrax >= 0.7.0",
    "optimistix >=0.0.1",
    "jax == 0.6.1",
    "nvidia-cublas-cu12==12.9.0.13",
    "scipy >= 1.0.0",
    "astropy >= 6.0.0",
    "numpy >= 1.0.0",
    "matplotlib >= 3.9.0",
    "equinox >= 0.11.0",
    "beartype >= 0.19.0",
    "dm-haiku >= 0.0.14",
    "numpyro >= 0.18.0",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "nbval",
]

docs = [
    "sphinx",
    "sphinxcontrib-apidoc",
    "myst_nb",
    "sphinx_copybutton", 
    "sphinx_design",
    "sphinx_book_theme",
    "ipykernel",
    "sphinx_mdinclude",
    "sphinx_rtd_theme",
    "sphinx-autodoc2",
    "furo",
]

[tool.setuptools]
packages = [
    "odisseo",
]